# Analysis

./: CMakeLists.txt  README.md  main.cc  Диаграмма без названия.drawio
headers/: getter.hpp
sources/: getter.cc
